--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Transcription</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="frontend/styles.css">
 </head>
 <body>
     <h1>Audio Transcription</h1>
@@ -24,6 +24,6 @@
         <h2>Transcription Result:</h2>
         <div id="transcription-result"></div>
     </div>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="frontend/script.js"></script>
 </body>
 </html>
